# ATS-Crewai

./: README.md  app.py  pyproject.toml  requirements.txt  sample-env.txt
.github/workflows/: main.yaml
src/ats/: main.py  types.py
src/ats/crews/lead_filter_crew/: lead_filter_crew.py
src/ats/crews/lead_filter_crew/config/: agents.yaml  tasks.yaml
src/ats/crews/lead_response_crew/config/: agents.yaml  tasks.yaml
src/ats/crews/lead_score_crew/: lead_score_crew.py
src/ats/crews/lead_score_crew/config/: agents.yaml  tasks.yaml
src/ats/crews/resume_parser_crew/: resume_parser_crew.py
src/ats/crews/resume_parser_crew/config/: agents.yaml  tasks.yaml
src/ats/crews/resume_parser_crew/tools/: resume_parser_tool.py
src/ats/crews/resume_score_crew/: resume_score_crew.py
src/ats/crews/resume_score_crew/config/: agents.yaml  tasks.yaml
src/ats/crews/rewrite_resume_crew/: rewrite_resume_crew.py
src/ats/crews/rewrite_resume_crew/config/: agents.yaml  tasks.yaml
src/ats/crews/rewrite_resume_crew/tools/: rewrite_resume_tool.py
src/ats/crews/web_scraper_crew/: web_scraper_crew.py
src/ats/crews/web_scraper_crew/config/: agents.yaml  tasks.yaml
src/ats/email_responses/: Amelia Cole.txt  Jacob Reed.txt  John Carter.txt  Nora Blake.txt  Owen Mitchell.txt  Sophia Williams.txt
src/ats/utils/: candidateUtils.py
